--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 			href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/main.css" />
+		<link rel="stylesheet" href="../src/main.css" />
 		<title>Frontend Mentor | Results summary component</title>
 	</head>
 	<body>
